welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: not found: value lenght
  while (nums(z)!= lookingFor && z<=lenght(nums)){
                                    ^